# HeroesOfCivilization

./: CMakeLists.txt  ProjectDiagram.asta  README.md
ResourceFiles/: users
Resources/: coordinates  map.csv  mapTexture.psd
src/: ActionMenuState.cpp  ActionMenuState.h  Camera.cpp  Camera.h  Constants.h  Game.cpp  Game.h  GameContext.h  GameState.cpp  GameState.h  GameStates.h  GetName.cpp  GetName.h  Map.cpp  Map.h  MapCell.cpp  MapCell.h  MenuState.cpp  MenuState.h  PauseState.cpp  PauseState.h  State.cpp  State.h  StateManager.cpp  StateManager.h  main.cpp
src/Interface/: Buildings.cpp  Buildings.h  GetText.cpp  GetText.h  User.cpp  User.h
src/ResourceManager/: ResourceHolder.h  ResourceIdentifier.h
